RESOLVED FIXED33522
MSAA: Accessibility role of <select multiple> elements is wrong
https://bugs.webkit.org/show_bug.cgi?id=33522
Summary MSAA: Accessibility role of <select multiple> elements is wrong
Jon Honeycutt
Reported 2010-01-11 23:42:39 PST
The accessibility roles of <select multiple> elements and their child <option> elements are incorrect.
Attachments
patch (5.23 KB, patch)
2010-01-12 00:22 PST, Jon Honeycutt
darin: review+
jhoneycutt: commit-queue-
Jon Honeycutt
Comment 1 2010-01-12 00:22:45 PST
Jon Honeycutt
Comment 2 2010-01-12 15:15:23 PST
Committed in r53163.
Jon Honeycutt
Comment 3 2010-01-12 16:41:27 PST
Note You need to log in before you can comment on or make changes to this bug.