MSAA: Accessibility role of <select multiple> elements is wrong

https://bugs.webkit.org/show_bug.cgi?id=33522

Reviewed by Darin Adler.

WebKit/win:

* AccessibleBase.cpp:
(MSAARole):
Map the WebCore::ListBox and WebCore::ListBoxOption roles to the MSAA
"list" and "list item" roles.

LayoutTests:

* platform/win/accessibility/multiple-select-element-role-expected.txt: Added.
* platform/win/accessibility/multiple-select-element-role.html: Added.

Canonical link: https://commits.webkit.org/44571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53163 268f45cc-cd09-0410-ab3c-d52691b4dbfc