WebKit/win/AccessibleBase.cpp
@@ -556,6 +556,7 @@ static long MSAARole(AccessibilityRole role)
         case WebCore::GroupRole:
             return ROLE_SYSTEM_GROUPING;
         case WebCore::ListRole:
+        case WebCore::ListBoxRole:
             return ROLE_SYSTEM_LIST;
         case WebCore::TableRole:
             return ROLE_SYSTEM_TABLE;
@@ -566,6 +567,7 @@ static long MSAARole(AccessibilityRole role)
         case WebCore::ImageRole:
             return ROLE_SYSTEM_GRAPHIC;
         case WebCore::ListItemRole:
+        case WebCore::ListBoxOptionRole:
             return ROLE_SYSTEM_LISTITEM;
         case WebCore::PopUpButtonRole:
             return ROLE_SYSTEM_COMBOBOX;
